feat: add wip create links swagger
